--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@ DB_USER=adminfastfood
 DB_PASS=@SOAT47fastfood
 DB_PORT=3306
 DB_DIALECT=mysql
-
 PREPARATION_HOST=
+AWS_REGION = "us-east-1"
 
 # Mercado Pago
 MP_ACCESS_TOKEN=TEST-2391186274278738-082320-18526955396c4a03b184263930279880-136971995
