implementando a fila de payment e order no micosservico de payment

--- a/.env
+++ b/.env
@@ -12,3 +12,9 @@ PREPARATION_HOST=
 # Mercado Pago
 MP_ACCESS_TOKEN=TEST-2391186274278738-082320-18526955396c4a03b184263930279880-136971995
 SANDBOX=true
+AWS_REGION = "us-east-1"
+AWS_ACCESSKEY = "AKIAU6GD2UXZQNEVI5QX"
+AWS_SECRETKEY = "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"
+AWS_ORDER_QUEE01 = "https://sqs.us-east-1.amazonaws.com/339713107443/PedidoQueue01-basico.fifo"
+AWS_PAYMENT_QUEE01 = "https://sqs.us-east-1.amazonaws.com/339713107443/Pagamento01-basico.fifo"
+AWS_GRUPO01="Grupo01.BASICO"
