--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-sqs": "^3.521.0",
+    "aws-sdk": "^2.1565.0",
     "body-parser": "^1.18.3",
     "class-transformer": "^0.5.1",
     "db-migrate": "^0.11.13",
