feature recebendo da fila do pedido mais webhook alem de caso de excessao publicando na compensacao do pedido

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 APP_ENV=fastfood
-DB_SCHEMA=fastfood-db
-DB_NAME=fastfood-db
-DB_HOST=fastfooddbserver.mysql.database.azure.com
-DB_USER=adminfastfood
-DB_PASS=@SOAT47fastfood
+DB_SCHEMA=fastfood-payment
+DB_NAME=fastfood-payment
+DB_HOST=localhost
+DB_USER=root
+DB_PASS=1234
 DB_PORT=3306
 DB_DIALECT=mysql
 
@@ -12,9 +12,10 @@ PREPARATION_HOST=
 # Mercado Pago
 MP_ACCESS_TOKEN=TEST-2391186274278738-082320-18526955396c4a03b184263930279880-136971995
 SANDBOX=true
-AWS_REGION = "us-east-1"
-AWS_ACCESSKEY = "AKIAU6GD2UXZQNEVI5QX"
-AWS_SECRETKEY = "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"
-AWS_ORDER_QUEE01 = "https://sqs.us-east-1.amazonaws.com/339713107443/PedidoQueue01-basico.fifo"
-AWS_PAYMENT_QUEE01 = "https://sqs.us-east-1.amazonaws.com/339713107443/Pagamento01-basico.fifo"
+AWS_REGION="us-east-1"
+AWS_ACCESSKEY="AKIAU6GD2UXZQNEVI5QX"
+AWS_SECRETKEY="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"
+AWS_ORDER_QUEE01="https://sqs.us-east-1.amazonaws.com/339713107443/PedidoQueue01-basico.fifo"
+AWS_PAYMENT_QUEE01="https://sqs.us-east-1.amazonaws.com/339713107443/Pagamento01-basico.fifo"
 AWS_GRUPO01="Grupo01.BASICO"
+AWS_COMPESATION_ORDER_QUEE01="https://sqs.us-east-1.amazonaws.com/339713107443/compesacao_pagamento.fifo"
