--- a/.env
+++ b/.env
@@ -18,4 +18,5 @@ AWS_SECRETKEY="iaueIhLcGIqR6f5mNUuZRx3xwTCvn5wKDqe6Rz0S"
 AWS_ORDER_QUEE01="https://sqs.us-east-1.amazonaws.com/339713107443/PedidoQueue01-basico.fifo"
 AWS_PAYMENT_QUEE01="https://sqs.us-east-1.amazonaws.com/339713107443/Pagamento01-basico.fifo"
 AWS_GRUPO01="Grupo01.BASICO"
-AWS_COMPESATION_ORDER_QUEE01="https://sqs.us-east-1.amazonaws.com/339713107443/compesacao_pagamento.fifo"
+AWS_COMPESATION_ORDER_QUEE01="https://sqs.us-east-1.amazonaws.com/339713107443/compesacao_pedido.fifo"
+AWS_COMPESATION_PAYMENT_QUEE01 = "https://sqs.us-east-1.amazonaws.com/339713107443/compesacao_pagamento.fifo"
